bk_ida/gccida/g0/combine_movables
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_movables/src/loop.c:1924:18: error: expected expression
*( machine_mode *)mode = class_narrowest_mode[1]; 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_movables/src/loop.c:1924:4: error: use of undeclared identifier 'machine_mode'
*( machine_mode *)mode = class_narrowest_mode[1]; 
   ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_movables/src/obj/loop.o] Error 1
